[gd_scene load_steps=23 format=3 uid="uid://bprsrvm0dbjj7"]

[ext_resource type="Script" path="res://capitulo 1/scripts/sala3.gd" id="1_43cq6"]
[ext_resource type="Texture2D" uid="uid://bgwfidj3kdw6b" path="res://capitulo 1/assets/sala3.png" id="2_7q174"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y0js1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1tt6b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w5mun"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_et1nb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wah7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_npiy7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w8mr2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ctbvb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0qaw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qvdto"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6exi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqpot"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kca2p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1f1eu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i0dhe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cquv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fgodi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6o1tu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xcjil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6oqpm"]

[node name="Sala3" type="Node2D"]
script = ExtResource("1_43cq6")

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_7q174")

[node name="porta" type="Button" parent="."]
offset_left = 116.0
offset_top = 116.0
offset_right = 282.0
offset_bottom = 481.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_y0js1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1tt6b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w5mun")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_et1nb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6wah7")
flat = true

[node name="setaL" type="Button" parent="."]
offset_left = 28.0
offset_top = 265.0
offset_right = 76.0
offset_bottom = 309.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_npiy7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_w8mr2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ctbvb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_w0qaw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qvdto")
flat = true

[node name="setaR" type="Button" parent="."]
offset_left = 748.0
offset_top = 265.0
offset_right = 801.0
offset_bottom = 311.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_u6exi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_eqpot")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kca2p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1f1eu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i0dhe")
flat = true

[node name="Pôsteres" type="Button" parent="."]
offset_left = 511.0
offset_top = 131.0
offset_right = 659.0
offset_bottom = 230.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cquv3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fgodi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6o1tu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xcjil")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6oqpm")
flat = true

[node name="textoPoster" type="Label" parent="."]
offset_left = 272.0
offset_top = 495.0
offset_right = 527.0
offset_bottom = 526.0
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="porta" to="." method="_on_porta_pressed"]
[connection signal="pressed" from="setaL" to="." method="_on_seta_l_pressed"]
[connection signal="pressed" from="setaR" to="." method="_on_seta_r_pressed"]
[connection signal="pressed" from="Pôsteres" to="." method="_on_pôsteres_pressed"]
